--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@
   url: /
 
 - title: Poznámky
-  url: /poznamky/
+  url: /blog/poznamky/
 
 - title: Projekty
-  url: /projekty/
+  url: /blog/projekty/
 
 - title: Rodina
-  url: /rodina/
+  url: /blog/rodina/
